<resources>
    <string name="app_name">Control de luces</string>

    <!-- Main -->
    <string name="bienvenida">Bienvenido/a</string>
    <string name="cambiarColorManualmente">Cambiar color manualamente</string>
    <string name="elegirPaleta">Seleccionar un color de nuestra paleta</string>
    <string name="seleccionarAlarma">Alarma</string>
    <string name="elegirSensores">Probar sensores</string>

    <!-- Sensor -->
    <string name="sensorActivityName">Configurar manualmente el color</string>
    <string name="valorSensor">valor del sensor</string>
    <string name="lblNombresSensores"></string>

    <!-- Paleta -->
    <string name="paletaActivityName">Paleta colores</string>

    <!-- Alarma -->
    <string name="alarmaActivityName">Configurar alarma</string>
    <string name="guardarAlarma">Guardar alarma</string>


    <!-- Probar sensores -->
    <string name="sensoresActivityName">Probar sensores</string>
    <string name="nombreSensores"></string>
    <string name="valoresSensores"></string>

</resources>
