<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ar.com.unlam.soa.controldeluces.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20dp"
        android:text="@string/bienvenida" />

    <Button
        android:id="@+id/btnSensor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cambiarColorManualmente"/>

    <Button
        android:id="@+id/btnPaleta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elegirPaleta"/>

    <Button
        android:id="@+id/btnAlarma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/seleccionarAlarma"/>

    <Button
        android:id="@+id/btnSensores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elegirSensores"/>

</android.support.v7.widget.LinearLayoutCompat>
